CodeBlock: Size m_exceptionHandlers to fit from creation. <https://webkit.org/b/127234>

Avoid allocation churn for CodeBlock::m_exceptionHandlers.

Reviewed by Anders Carlsson.

* bytecode/CodeBlock.h:

    Removed unused CodeBlock::allocateHandlers() function.

* bytecode/CodeBlock.cpp:
(JSC::CodeBlock::CodeBlock):

    Use resizeToFit() instead of grow() for m_exceptionHandlers
    since we know it's never going to change size.

(JSC::CodeBlock::shrinkToFit):

    No need to shrink m_exceptionHandlers here since it's already
    the perfect size.


Canonical link: https://commits.webkit.org/145236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162277 268f45cc-cd09-0410-ab3c-d52691b4dbfc